--- a/app/views/contacts/_new.html.erb
+++ b/app/views/contacts/_new.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="mb-md-0 mb-5">
-    <%= form_for @contact, id: 'contact', remote: true do |f| %>
+    <%= form_with model: @contact, id: 'contact_form', remote: true do |f| %>
       <div class="row">
         <div class="col-2"></div>
         <div class="col-md-4">
@@ -11,7 +11,7 @@
 
         <div class="col-md-4">
           <div class="md-form mb-0">
-            <%= f.text_field :email, required: true, class: 'form-control', placeholder: "Email" %>
+            <%= f.text_field :email, required: true, class: 'form-control email-field', placeholder: "Email" %>
           </div>
         </div>
       </div>
@@ -30,21 +30,8 @@
       </div>
 
       <div class="text-center text-md-left">
-        <%= f.submit 'Send Message', class: 'btn btn-outline-secondary btn-sm col-3 mt-4 mx-auto' %>
+        <%= f.submit 'Send Message', class: 'btn btn-outline-secondary btn-sm col-3 mt-4 mx-auto submit-button' %>
       </div>
     <% end %>
   </div>
 </div>
-
-<script>
-  window.addEventListener("load", () => {
-    const element = document.querySelector("#contact");
-    element.addEventListener("ajax:success", (event) => {
-      const [_data, _status, xhr] = event.detail;
-      element.insertAdjacentHTML("beforeend", xhr.responseText);
-    });
-    element.addEventListener("ajax:error", () => {
-      element.insertAdjacentHTML("beforeend", "<p>ERROR</p>");
-    });
-  });
-</script>
