--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,4 +1,4 @@
-<div class="messages container">
+<div class="messages container position-relative">
   <% flash.each do |name, msg|%>
     <div class="alert alert-<%= name == "notice" ? "success" : "danger" %> alert-dismissible fade show" role="alert">
       <%= msg %>
