--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="row">
     <div class="col-1"></div>
-    <h1 class="col-8 mt-4 text-white title-text">Hi, I'm Mark. I'm a full-stack Ruby on Rails developer.</h1>
+    <h1 class="col-8 mt-4 text-white" id="greeting">Hi, I'm Mark. I'm a full-stack Ruby on Rails developer.</h1>
     <div class="col-2 row d-flex flex-wrap align-items-center mt-4" id='socials'>
       <a href="https://github.com/MarkBezsonov" target="_blank"><%= image_tag 'github.jpg', class: 'float-end' %></a>
       <a href="https://www.linkedin.com/in/mark-b-31947b11a/" target="_blank"><%= image_tag 'linkedin.jpg', target: :_blank, class: 'float-end' %></a>
@@ -24,7 +24,7 @@
   
   <div class="row">
     <div class="col-1"></div>
-    <p class="mt-4 text-white body-text text-center col-10">
+    <p class="mt-4 text-white body body-text text-center col-10">
       I am a full-stack Ruby on Rails developer who strives to always be working on his craft and learning 
       new things! I enjoy staying on top of the latest technological trends/technologies and do what I can to 
       implement them into the projects that I work on. In my spare time, I also frequent the gym and produce 
@@ -33,60 +33,54 @@
       My current language and technology digital toolbox:
     </p>
   </div>
-  <div class="row mt-4 text-center">
-    <div class="col-1"></div>
-    <div class="col-10 devicon">
-      <i class="devicon-ruby-plain-wordmark"></i>
-      <i class="devicon-rails-plain-wordmark"></i>
-      <i class="devicon-javascript-plain"></i>
-      <i class="devicon-jquery-plain-wordmark"></i>
-      <i class="devicon-html5-plain-wordmark"></i>
-    </div>
-    <div class="col-1"></div>
-    <div class="col-1"></div>
-    <div class="mt-4 col-10 devicon">
-      <i class="devicon-css3-plain-wordmark"></i>
-      <i class="devicon-sass-original"></i>
-      <i class="devicon-bootstrap-plain-wordmark"></i>
-      <i class="devicon-postgresql-plain-wordmark"></i>
-      <i class="devicon-heroku-original-wordmark"></i>
-    </div>
-    <div class="col-1"></div>
-    <div class="col-1"></div>
-    <div class="mt-4 col-10 devicon">
-      <i class="devicon-git-plain-wordmark"></i>
-      <i class="devicon-github-original-wordmark"></i>
-      <i class="devicon-redis-plain-wordmark"></i>
-      <i class="devicon-bash-plain"></i>
-      <i class="devicon-amazonwebservices-plain-wordmark"></i>
-    </div>
-    <div class="col-1"></div>
+  <div class="container">
+    <div class="row mt-4 text-center">
+      <div class="col-1"></div>
+      <div class="col-10 devicon">
+        <i class="devicon-ruby-plain-wordmark"></i>
+        <i class="devicon-rails-plain-wordmark"></i>
+        <i class="devicon-javascript-plain"></i>
+        <i class="devicon-jquery-plain-wordmark"></i>
+        <i class="devicon-html5-plain-wordmark"></i>
+        <i class="devicon-css3-plain-wordmark"></i>
+        <i class="devicon-sass-original"></i>
+        <i class="devicon-bootstrap-plain-wordmark"></i>
+        <i class="devicon-postgresql-plain-wordmark"></i>
+        <i class="devicon-heroku-original-wordmark"></i>
+        <i class="devicon-git-plain-wordmark"></i>
+        <i class="devicon-github-original-wordmark"></i>
+        <i class="devicon-redis-plain-wordmark"></i>
+        <i class="devicon-bash-plain"></i>
+        <i class="devicon-amazonwebservices-plain-wordmark"></i>
+      </div>
+      <div class="col-1"></div>
 
-    <div class="devicon-border"></div>
-    <div class="col-1"></div>
-      <a href="#projects" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto">Projects</a>
-      <a href="/" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto">Top</a>
-      <a href="#contact" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto">Contact</a>
-    <div class="col-1"></div>
+      <div class="devicon-border"></div>
+      <div class="col-1"></div>
+        <a href="#projects" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto">Projects</a>
+        <a href="/" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto">Top</a>
+        <a href="#contact" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto">Contact</a>
+      <div class="col-1"></div>
+    </div>
   </div>
 
   <div id="projects"></div>
   <h2 class="mt-4 subtitle-text text-center" id="projects-subtitle">Projects</h2>
-  <p class='text-white mt-4 body-text text-center'>
+  <p class='text-white mt-4 body body-text text-center'>
     These projects are hosted on Heroku, so please give them a few seconds to fire up. Thank you!
   </p>
   
   <div id="carouselExampleDark" class="mt-4 carousel carousel-dark slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" class="active" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" class="active" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" class="active" aria-label="Slide 4"></button>
     </div>
 
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="5000">
-        <a href="https://markbezsonov-photo-app.herokuapp.com/" target="_blank"><%= image_tag 'photo-app.jpg', size:'1925x625', class: 'd-block w-100' %></a>
+        <a href="https://markbezsonov-photo-app.herokuapp.com/" target="_blank"><%= image_tag 'photo-app.jpg', size:'1925x625', class: 'img-fluid d-block w-100' %></a>
         <div class="carousel-caption bg-dark text-white">
           <h5><a href="https://markbezsonov-photo-app.herokuapp.com/" target="_blank">Photo App</a></h5>
           <div class="row">
@@ -116,7 +110,7 @@
       </div>
 
       <div class="carousel-item" data-bs-interval="5000">
-        <a href="https://markbezsonov-finance-tracker.herokuapp.com/" target="_blank"><%= image_tag 'finance-tracker.jpg', size:'1925x625', class: 'd-block w-100' %></a>
+        <a href="https://markbezsonov-finance-tracker.herokuapp.com/" target="_blank"><%= image_tag 'finance-tracker.jpg', size:'1925x625', class: 'img-fluid d-block w-100' %></a>
         <div class="carousel-caption d-none d-md-block bg-dark text-white">
           <h5><a href="https://markbezsonov-finance-tracker.herokuapp.com/" target="_blank">Finance Tracker</a></h5>
           <div class="row">
@@ -145,7 +139,7 @@
       </div>
 
       <div class="carousel-item" data-bs-interval="5000">
-        <a href="https://markbezsonov-message-me.herokuapp.com/" target="_blank"><%= image_tag 'message-me.jpg', size:'1925x625', class: 'd-block w-100' %></a>
+        <a href="https://markbezsonov-message-me.herokuapp.com/" target="_blank"><%= image_tag 'message-me.jpg', size:'1925x625', class: 'img-fluid d-block w-100' %></a>
         <div class="carousel-caption d-none d-md-block bg-dark text-white">
           <h5><a href="https://markbezsonov-message-me.herokuapp.com/" target="_blank">Message Me</a></h5>
           <div class="row">
@@ -168,7 +162,7 @@
       </div>
       
       <div class="carousel-item" data-bs-interval="5000">
-        <a href="https://markbezsonov-alpha-blog.herokuapp.com/" target="_blank"><%= image_tag 'alpha-blog.jpg', size:'1925x625', class: 'd-block w-100' %></a>
+        <a href="https://markbezsonov-alpha-blog.herokuapp.com/" target="_blank"><%= image_tag 'alpha-blog.jpg', size:'1925x625', class: 'img-fluid d-block w-100' %></a>
         <div class="carousel-caption d-none d-md-block bg-dark text-white">
           <h5><a href="https://markbezsonov-alpha-blog.herokuapp.com/" target="_blank">Alpha Blog</a></h5>
           <div class="row">
@@ -212,15 +206,15 @@
   <div id="contact"></div>
   <h2 class="mt-4 subtitle-text text-center" id="contact-subtitle">Contact</h2>
   
-  <p class="mt-4 text-white body-text text-center">
+  <p class="mt-4 text-white body body-text text-center">
     Please feel free to reach out to me via the following platforms:
   </p>
   <div class="col-12 text-center mt-4" id='socials'>
-    <a href="https://github.com/MarkBezsonov" target="_blank"><%= image_tag 'github.jpg', class: 'm-4' %></a>
-    <a href="https://www.linkedin.com/in/mark-b-31947b11a/" target="_blank"><%= image_tag 'linkedin.jpg', class: 'm-4' %></a>
-    <a href="mailto: markbezsonov@gmail.com?subject=Regarding%20Your%20Portfolio" target="_blank"><%= image_tag 'email.jpg', class: 'm-4' %></a>
+    <a href="https://github.com/MarkBezsonov" target="_blank"><%= image_tag 'github.jpg', class: 'mx-4 end-socials' %></a>
+    <a href="https://www.linkedin.com/in/mark-b-31947b11a/" target="_blank"><%= image_tag 'linkedin.jpg', class: 'mx-4 end-socials' %></a>
+    <a href="mailto: markbezsonov@gmail.com?subject=Regarding%20Your%20Portfolio" target="_blank"><%= image_tag 'email.jpg', class: 'mx-4 end-socials' %></a>
   </div>
-  <p class="mt-4 mb-4 text-white body-text text-center">
+  <p class="mt-4 mb-4 text-white body body-text text-center">
     Alternatively, you may also send me an email directly here:
   </p>
 
