--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,18 +4,18 @@
   </div>
   <div class="row">
     <div class="col-1"></div>
-    <h1 class="col-8 mt-4 text-white" id="greeting">Hi, I'm Mark. I'm a full-stack Ruby on Rails developer.</h1>
+    <h1 class="col-8 mt-4 text-white" id="greeting">Hi, I'm Mark. I'm an IT engineer and full-stack developer.</h1>
     <div class="col-2 row d-flex flex-wrap align-items-center mt-4" id='socials'>
-      <a href="https://github.com/MarkBezsonov" target="_blank"><%= image_tag 'github.jpg', class: 'float-end' %></a>
-      <a href="https://www.linkedin.com/in/mark-b-31947b11a/" target="_blank"><%= image_tag 'linkedin.jpg', target: :_blank, class: 'float-end' %></a>
-      <a href="mailto: markbezsonov@gmail.com?subject=Regarding%20Your%20Portfolio"><%= image_tag 'email.jpg', class: 'float-end' %></a>
+      <a href="https://github.com/MarkBezsonov" target="_blank"><%= image_tag 'github.jpg', class: 'float-end start-socials' %></a>
+      <a href="https://www.linkedin.com/in/mark-b-31947b11a/" target="_blank"><%= image_tag 'linkedin.jpg', target: :_blank, class: 'float-end start-socials' %></a>
+      <a href="mailto: markbezsonov@gmail.com?subject=Regarding%20Your%20Portfolio"><%= image_tag 'email.jpg', class: 'float-end start-socials' %></a>
     </div>
     <div class="col-1"></div>
 
     <div class="col-1"></div>
-      <a href="#about" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto">About</a>
-      <a href="#projects" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto">Projects</a>
-      <a href="#contact" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto">Contact</a>
+      <a href="#about" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto nav-button">About</a>
+      <a href="#projects" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto nav-button">Projects</a>
+      <a href="#contact" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto nav-button">Contact</a>
     <div class="col-1"></div>
   </div>
 
@@ -57,9 +57,9 @@
 
       <div class="devicon-border"></div>
       <div class="col-1"></div>
-        <a href="#projects" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto">Projects</a>
-        <a href="/" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto">Top</a>
-        <a href="#contact" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto">Contact</a>
+        <a href="#projects" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto nav-button">Projects</a>
+        <a href="/" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto nav-button">Top</a>
+        <a href="#contact" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto nav-button">Contact</a>
       <div class="col-1"></div>
     </div>
   </div>
@@ -197,9 +197,9 @@
   
   <div class="row mt-4">
     <div class="col-1"></div>
-      <a href="#contact" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto">Contact</a>
-      <a href="/" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto">Top</a>
-      <a href="#about" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto">About</a>
+      <a href="#contact" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto nav-button">Contact</a>
+      <a href="/" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto nav-button">Top</a>
+      <a href="#about" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto nav-button">About</a>
     <div class="col-1"></div>
   </div>
 
@@ -222,9 +222,9 @@
 
   <div class="row mt-4">
     <div class="col-1"></div>
-      <a href="#about" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto">About</a>
-      <a href="/" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto">Top</a>
-      <a href="#projects" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto">Projects</a>
+      <a href="#about" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto nav-button">About</a>
+      <a href="/" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto nav-button">Top</a>
+      <a href="#projects" class="btn btn-outline-secondary btn-lg col-3 mt-4 mx-auto nav-button">Projects</a>
     <div class="col-1"></div>
   </div>
 
