--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <!-- <div class="testing">This is test text</div> -->
   <div class="row">
     <%= image_tag 'me.jpg', size: '1119x797', class: 'my-picture img-fluid' %>
   </div>
